# cs2-vision-trainer

./: .gitignore  .gitmodules  README.md  pyproject.toml
cfg/: dataset.example.yaml
docs/: BUILD.md  USAGE.md
docs/superpowers/plans/: 2026-06-11-cs2-vision-trainer-mvp.md  2026-06-16-cs2-multiclass-reset.md  2026-06-19-cs2-runtime-controller.md  2026-06-20-cpp-runtime-python-sdk.md
docs/superpowers/specs/: 2026-06-11-cs2-vision-trainer-design.md  2026-06-16-cs2-multiclass-reset-design.md  2026-06-19-cs2-runtime-controller-design.md  2026-06-20-cpp-runtime-python-sdk-design.md
examples/: runtime_dxgi_dryrun.py  runtime_live_move.py  runtime_video_dryrun.py
src/cs2_vision_runtime/: __init__.py  runtime.py
src/cs2_vision_trainer/: __init__.py  annotation.py  capture.py  cli.py  config.py  dataset_builder.py  detections.py  detector.py  frame_extractor.py  gui.py  render.py  review.py
src/cs2_vision_trainer/app/: __init__.py  annotator.py  cli.py  dataset_commands.py  gui.py  reviewer.py  runtime_commands.py  training_commands.py
src/cs2_vision_trainer/dataset/: __init__.py  annotation.py  builder.py  extractor.py  schema.py  validation.py
src/cs2_vision_trainer/review/: __init__.py  core.py
src/cs2_vision_trainer/runtime/: __init__.py  capture.py  detections.py  detector.py  render.py
tests/: test_annotation.py  test_capture.py  test_config.py  test_dataset_builder.py  test_dataset_validation.py  test_detections.py  test_detector_filters.py  test_export_schema.py  test_frame_extractor.py  test_gui.py  test_review.py  test_schema.py  test_vision_runtime_sdk.py
