[project]
name = "cs2-vision-trainer"
version = "0.1.0"
description = "Read-only CS2 training-range vision analyzer using YOLO and OpenCV."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "opencv-python>=4.10",
    "ultralytics>=8.3",
    "mss>=10.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
]
accel = [
    "onnxruntime-gpu>=1.18",
]

[project.scripts]
cs2-vision-trainer = "cs2_vision_trainer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cs2_vision_trainer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
