[project]
name = "cs2-vision-trainer"
version = "0.1.0"
description = "YOLO dataset, training, export, and review tools for CS2 vision experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "opencv-python>=4.10",
    "torch>=2.11",
    "torchvision>=0.26",
    "ultralytics>=8.3",
    "mss>=10.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
]
accel = [
    "onnxruntime-gpu>=1.18",
]

[project.scripts]
cs2-vision-trainer = "cs2_vision_trainer.cli:main"
cs2-vision-trainer-gui = "cs2_vision_trainer.gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cs2_vision_trainer", "src/cs2_vision_runtime"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
